[package]
name = "gotham-cors-middleware"
version = "0.2.1"
authors = ["Andy Bell <andy.bell.github@gmail.com>"]
description = "A small crate to add basic CORS functionality to Gotham apps"
repository = "https://github.com/simpleweb/gotham-cors-middleware"
readme = "./README.md"
license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.1"
gotham = { path = "../gotham/gotham" }
gotham_derive = { path = "../gotham/gotham_derive" }
http = "0.1"
hyper = "0.12"
unicase = "2.1"

[dev-dependencies]
mime = "0.3"
